--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,11 +6,11 @@
 #    By: cdeville <cdeville@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/12 16:23:30 by peanut            #+#    #+#              #
-#    Updated: 2024/10/18 12:06:51 by cdeville         ###   ########.fr        #
+#    Updated: 2024/10/18 15:07:28 by cdeville         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME=ScavTrap
+NAME=FragTrap
 
 CC=c++
 
@@ -23,6 +23,7 @@ SRC_DIR = ./
 SRC =	main.cpp \
 		ClapTrap.cpp \
 		ScavTrap.cpp \
+		FragTrap.cpp
 
 SRCS = $(addprefix $(SRC_DIR), $(SRC))
 
